--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^3.0.2",
     "react-scripts": "3.4.3"
   },
   "scripts": {
